@@ -1,12 +1,21 @@
+2006-08-18  Richard Hult  <richard@imendio.com>
+
+	* src/dh-keyword-model.c: (keyword_model_get_column_type),
+	* src/dh-link.c: (dh_link_get_is_deprecated),
+	* src/dh-parser.c: (parser_start_node_cb):
+	* src/dh-search.c: (dh_search_new, search_cell_data_func): Make
+	deprecated keywords grey. Fixes bug #310542.
+
 2006-08-17  Richard Hult  <richard@imendio.com>
 
 	* src/dh-base.c: (base_add_books_in_data_dir), (base_init_books):
-	* src/dh-parser.c: (parser_start_node_cb): Fix style.
+	* src/dh-parser.c: (parser_start_node_cb): Fix style and add
+	parsing for the deprecated property.
 
 2006-08-17  Richard Hult  <richard@imendio.com>
 
-	* devhelp.desktop.in.in (_GenericName): Add, fixes bug
-	#349880 (Matthias Clasen).
+	* devhelp.desktop.in.in (_GenericName): Add generic name, fixes
+	bug #349880 (Matthias Clasen).
 
 2006-08-03  Richard Hult  <richard@imendio.com>
 
